Construida la funcionalidad para la lista de los productos

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 APP_ENV=DEV
 SERVER_PORT=4800
+DATABASE=gabarino_products
+HOST=18.219.247.19
+USER_DB=gabarino_products
+PASS=GSw/q"!eP#k5pHXr
+PORT=3306
