--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "nodemon": "^1.19.1",
+    "style-loader": "^0.23.1",
     "tar": "^4.4.8",
     "webpack": "^4.32.2",
     "webpack-dev-middleware": "^3.7.0"
@@ -45,6 +47,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.0.3",
+    "react-responsive-carousel": "^3.1.49",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
